<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:orientation="vertical" android:layout_width="match_parent"
android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/plus_final_1stsegement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rectangle_2"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true">

            <LinearLayout
                android:id="@+id/back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="13dp"
                android:orientation="vertical">

                <View
                    android:id="@+id/vector"
                    android:layout_width="11.75dp"
                    android:layout_height="18.69dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="11dp"
                    android:background="@drawable/ic_back" />
            </LinearLayout>

            <TextView
                android:layout_width="157dp"
                android:layout_height="24dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/raleway_bold"
                android:gravity="center"
                android:text="@string/group_detai"
                android:textAppearance="@style/group_detai" />

        </RelativeLayout>

        <View
            android:id="@+id/details_space"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/rectangle_2"
            android:layout_alignParentEnd="true"
            android:background="@drawable/ic_line_space" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/groupDetails_image"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="72dp"
            android:src="@drawable/ic_university_logo"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

        <EditText
            android:id="@+id/groupName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/groupDetails_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal|top"
            android:hint="Enter Group Name"
            android:textAppearance="@style/enter_group" />

        <View
            android:id="@+id/vector_7"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_below="@+id/groupName"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="2dp"
            android:background="@drawable/ic_line_space" />

        <LinearLayout
            android:id="@+id/addNewMember"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:layout_below="@+id/vector_7"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="0dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:layout_width="34.83dp"
                android:layout_height="19dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:background="@drawable/ic_create_new_group" />

            <TextView
                android:layout_width="145dp"
                android:layout_height="19dp"
                android:layout_marginStart="13.17dp"
                android:layout_marginLeft="13.17dp"
                android:fontFamily="@font/raleway_semibold"
                android:text="@string/add_new_member"
                android:textAppearance="@style/add_new_mem" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/groupLink"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:layout_below="@+id/addNewMember"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:layout_width="34.83dp"
                android:layout_height="19dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:background="@drawable/ic_group_link" />

            <TextView
                android:layout_width="95dp"
                android:layout_height="19dp"
                android:layout_marginStart="13.17dp"
                android:layout_marginLeft="13.17dp"
                android:fontFamily="@font/raleway_semibold"
                android:text="@string/group_link"
                android:textAppearance="@style/add_new_mem" />

            <View
                android:id="@+id/copy"
                android:layout_width="75dp"
                android:layout_height="25dp"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:background="@drawable/ic_join_button" />
        </LinearLayout>

        <View
            android:id="@+id/group_space"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_below="@+id/groupLink"
            android:layout_alignParentEnd="true"
            android:background="@drawable/ic_line_space" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/group_space"
            android:orientation="vertical">

            <TextView
                android:id="@+id/description"
                android:layout_width="88dp"
                android:layout_height="19dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/raleway_bold"
                android:gravity="center|top"
                android:text="@string/description"
                android:textAppearance="@style/description" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description"
                android:gravity="top"
                android:background="@null"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:lineSpacingExtra="6sp"
                android:text="@string/this_group_"
                android:textAppearance="@style/this_group_"
                android:translationY="-3.11sp" />
        </RelativeLayout>


    </RelativeLayout>

</RelativeLayout>