<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="hideKeyboard">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <RelativeLayout
            android:id="@+id/enter_group_name"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="13dp"
                android:src="@drawable/cross_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:fontFamily="@font/raleway_bold"
                android:gravity="center"
                android:text="@string/new_group"
                android:textAppearance="@style/new_group" />
        </RelativeLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/groupDetails_image"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:src="@drawable/ic_new_profile_image"
            android:layout_marginTop="20dp"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_group_name" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/groupDetails_image">

            <EditText
                android:id="@+id/new_group_name"
                android:layout_width="274dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description"

                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/raleway_medium"
                android:gravity="center"
                android:hint="Enter Group Name"
                android:lineSpacingExtra="6sp"
                android:textAppearance="@style/this_group_"
                android:translationY="-3.11sp"
                android:inputType="textPersonName"
                android:imeOptions="actionNext"/>



        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="134dp"
            android:layout_marginTop="35dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <View
                android:id="@+id/vector_7"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="0dp"
                android:background="@drawable/ic_line_space" />

            <TextView
                android:id="@+id/description"
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/vector_7"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/raleway_bold"
                android:gravity="top"
                android:text="@string/description"
                android:textAppearance="@style/description" />

            <EditText
                android:id="@+id/description_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:fontFamily="@font/raleway_medium"
                android:gravity="top"
                android:hint="@string/this_group_"
                android:lineSpacingExtra="6sp"
                android:textAppearance="@style/this_group_"
                android:translationY="-3.11sp"
                android:inputType="textMultiLine"
                android:imeOptions="actionNext"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@drawable/ic_next_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/raleway_bold"
                android:gravity="top"
                android:text="@string/next"
                android:textAppearance="@style/next" />
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>