<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="hideKeyboard">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:id="@+id/back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:background="@drawable/ic_back_background" />

            <View
                android:id="@+id/back_centre"
                android:layout_width="11.75dp"
                android:layout_height="18.69dp"
                android:layout_alignStart="@+id/back"
                android:layout_alignEnd="@+id/back"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="14dp"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="14dp"
                android:background="@drawable/ic_back" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="12dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10.25dp"
                android:layout_toEndOf="@+id/back_centre">

                <View
                    android:id="@+id/vectorsearch"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/searchbar"/>

                <View
                    android:id="@+id/search_icon"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="12dp"
                    android:layout_marginLeft="14dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/search_icon" />

                <EditText
                    android:id="@+id/search_chat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="0dp"
                    android:background="@null"
                    android:fontFamily="@font/raleway_medium"
                    android:gravity="center_vertical"
                    android:hint="@string/search_for_"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:paddingLeft="40dp"
                    android:textAppearance="@style/search_for_" />

            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout3"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

            <View
                android:id="@+id/group_icon"
                android:layout_width="35.25dp"
                android:layout_height="19dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:background="@drawable/ic_group_icon" />

            <TextView
                android:id="@+id/createGroup"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="12.75dp"
                android:layout_marginTop="22dp"
                android:fontFamily="@font/raleway_semibold"
                android:text="@string/create_new_"
                android:textAppearance="@style/create_new_"
                android:gravity="top"
                android:layout_toEndOf="@+id/group_icon" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout4"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout3">

            <View
                android:id="@+id/ic_group_135"
                android:layout_width="35.04dp"
                android:layout_height="27dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:background="@drawable/ic_group_135"></View>

            <TextView
                android:layout_width="139dp"
                android:layout_height="19dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="14.11dp"
                android:layout_marginTop="22dp"
                android:fontFamily="@font/raleway_semibold"
                android:text="@string/my_connecti"
                android:textAppearance="@style/my_connecti"
                android:gravity="top"
                android:layout_toEndOf="@+id/ic_group_135" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout5"
            android:layout_width="match_parent"
            android:layout_height="329dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout4">

            <View
                android:id="@+id/vector_7"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_below="@+id/groupName"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/ic_line_space" />

            <TextView
                android:id="@+id/suggested_g"
                android:layout_width="143dp"
                android:layout_height="19dp"
                android:fontFamily="@font/raleway_bold"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/suggested_g"
                android:textAppearance="@style/suggested_g"
                android:gravity="top"/>

            <View
                android:layout_width="65dp"
                android:layout_height="19dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="200dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/ic_seeall" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout5">

            <View
                android:id="@+id/vector_8"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_below="@+id/groupName"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/ic_line_space" />

            <TextView
                android:id="@+id/similar_pro"
                android:layout_width="143dp"
                android:layout_height="19dp"
                android:fontFamily="@font/raleway_bold"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/members"
                android:textAppearance="@style/members"
                android:gravity="top"/>

            <View
                android:layout_width="65dp"
                android:layout_height="19dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="200dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/ic_seeall" />

        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>




</FrameLayout>